--- a/packages/browser-pyright/tsconfig.json
+++ b/packages/browser-pyright/tsconfig.json
@@ -2,6 +2,7 @@
     "extends": "../../tsconfig.json",
     "compilerOptions": {
         "outDir": "./out",
+        "module": "esnext",
         "lib": [
             "es2019",
             "WebWorker",
